# qfx2csv

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  qfx2csv.py  requirements-dev.txt  requirements.text
.github/workflows/: python-package.yml
src/: qfx2csv.py
src/qfx2csv/: qfx2csv.py
tests/: test_main.py
tests/data/: notrans.ofx  stmtrs-160.ofx  stmtrs-160.ofx.csv
